[gd_scene load_steps=3 format=3 uid="uid://cbh8io1kt2vpy"]

[ext_resource type="Script" path="res://Scenes/Map.gd" id="1_3e6fa"]
[ext_resource type="Texture2D" uid="uid://biheixl0k7luw" path="res://Maps/Pickaxe.png" id="2_pjndv"]

[node name="SpriteMap" type="TileMap"]
format = 2
script = ExtResource("1_3e6fa")

[node name="InitialMoveTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.75

[node name="MoveTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.05

[node name="Pickaxe" type="Sprite2D" parent="."]
position = Vector2(565, 327)
texture = ExtResource("2_pjndv")

[connection signal="timeout" from="InitialMoveTimer" to="." method="_on_initial_move_timer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
